--- a/app/src/main/res/layout/teladevalidacao.xml
+++ b/app/src/main/res/layout/teladevalidacao.xml
@@ -38,19 +38,33 @@
         app:layout_constraintVertical_bias="0.502" />
 
     <Button
-        android:id="@+id/bt_liberarurna"
+        android:id="@+id/bt_voltarurna"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:text="Voltar"
+        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
+        android:textSize="36sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/bt_liberarurna"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ed_pwchefe" />
+
+    <Button
+        android:id="@+id/bt_liberarurna"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="112dp"
+        android:layout_marginTop="8dp"
         android:text="Liberar"
         android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
         android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ed_pwchefe" />
 
 </android.support.constraint.ConstraintLayout>
