Tentantiva de cpp com java e votação funcionar ok

--- a/app/src/main/res/layout/iniciar_votacao.xml
+++ b/app/src/main/res/layout/iniciar_votacao.xml
@@ -41,13 +41,13 @@
 
     <Button
         android:id="@+id/bt_liberarurna"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Confirmar"
+        android:background="@drawable/ok"
         android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
         android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
