--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,18 +49,20 @@
                     android:layout_weight="1"
                     android:paddingLeft="8dp"
                     android:paddingTop="12dp"
-                    android:src="@drawable/liberarvotacao" />
+                    android:src="@drawable/btn1" />
 
                 <Button
                     android:id="@+id/bt_liberacao"
+                    style="@android:style/Widget.Material.Button"
                     android:layout_width="175dp"
                     android:layout_height="100dp"
                     android:layout_marginBottom="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
-                    android:layout_weight="1"
 
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
                     android:text="Liberação da Urna"
                     android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                     tools:layout_editor_absoluteX="59dp"
@@ -82,18 +84,20 @@
                     android:layout_weight="1"
                     android:paddingLeft="8dp"
                     android:paddingTop="12dp"
-                    android:src="@drawable/listagemvotos" />
+                    android:src="@drawable/btn2" />
 
                 <Button
                     android:id="@+id/bt_totalvt"
+                    style="@android:style/Widget.Material.Button"
                     android:layout_width="175dp"
                     android:layout_height="100dp"
                     android:layout_marginBottom="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
-                    android:layout_weight="1"
 
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
                     android:text="Totalizar Votos"
                     android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                     tools:layout_editor_absoluteX="291dp"
@@ -134,18 +138,20 @@
                     android:layout_weight="1"
                     android:paddingLeft="8dp"
                     android:paddingTop="12dp"
-                    android:src="@drawable/votacao" />
+                    android:src="@drawable/btn3" />
 
                 <Button
                     android:id="@+id/bt_iniciovt"
+                    style="@android:style/Widget.Material.Button"
                     android:layout_width="175dp"
                     android:layout_height="100dp"
                     android:layout_marginBottom="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
-                    android:layout_weight="1"
 
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
                     android:text="Iniciar Votação"
                     android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                     tools:layout_editor_absoluteX="59dp"
@@ -160,16 +166,27 @@
                 android:background="@drawable/bg_blue"
                 android:orientation="horizontal">
 
+                <ImageView
+                    android:id="@+id/imageView4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:paddingLeft="8dp"
+                    android:paddingTop="12dp"
+                    android:src="@drawable/btn4" />
+
                 <Button
                     android:id="@+id/bt_encerravt"
+                    style="@android:style/Widget.Material.Button"
                     android:layout_width="175dp"
                     android:layout_height="100dp"
                     android:layout_marginBottom="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
-                    android:layout_weight="1"
 
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
                     android:text="Encerrar Votação"
                     android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                     tools:layout_editor_absoluteX="220dp"
