--- a/app/src/main/res/layout/lista_candidatos.xml
+++ b/app/src/main/res/layout/lista_candidatos.xml
@@ -73,6 +73,36 @@
                     android:layout_marginTop="8dp"
                     android:layout_weight="1"
                     android:clickable="true" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btn_nulo"
+                    style="@android:style/Widget.Material.Button"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_margin="8dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/bg_blue"
+                    android:text="NULO"
+                    android:visibility="visible" />
+
+                <Button
+                    android:id="@+id/btn_branco"
+                    style="@android:style/Widget.Material.Button"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_margin="8dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/bg_blue"
+                    android:text="BRANCO"
+                    android:visibility="visible" />
         </LinearLayout>
 
 </LinearLayout>
